--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,13 +15,7 @@ description: 'SHML is a shell framework for faster and easier script development
 url: https://github.com/maxcdn/shml/
 baseurl: /shml/
 
-authors:
-  name: 'Justin Dorfman'
-  twitter: jdorfman
-  name: 'Josh Mervine'
-  twitter: mervinej
-
-paginate: 1
+# paginate: 1
 
 # Custom vars
-version: 1.0.2
+version: 1.0.3
