--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,4 +1,6 @@
-source 'https://rubygems.org'
-gem 'github-pages'
-gem 'pathutil'
-gem 'rouge'
+source "https://rubygems.org"
+
+gem "yajl-ruby", "~> 1.3.1"
+gem "github-pages"
+gem "pathutil"
+gem "rouge"
