--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shml",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "SHML is a shell framework for faster and easier script development.",
   "bin": {
       "shml": "shml.sh",
@@ -15,18 +15,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MaxCDN/shml.git"
+    "url": "git+https://github.com/odb/shml.git"
   },
   "keywords": [
     "sh",
     "color",
     "bash",
+    "zsh",
     "linux",
     "darwin"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MaxCDN/shml/issues"
+    "url": "https://github.com/odb/shml/issues"
   },
-  "homepage": "http://maxcdn.github.io/shml/"
+  "homepage": "http://shml.xyz/"
 }
